--- a/style/_modal.scss
+++ b/style/_modal.scss
@@ -82,3 +82,10 @@ a[rel="modal:close"] {
   background: #fff;
   box-shadow: -1px 1px 2px rgba(0,0,0,0.2);
 }
+
+.modal-item {
+	background-color: white;
+	width: 100px;
+	height: 100px;
+	display: block;
+}
