--- a/style/framework.scss
+++ b/style/framework.scss
@@ -1,3 +1,7 @@
+/* =================================
+	Flexbox framework
+==================================== */
+
 .grid {
   margin: 0 auto;
   max-width: 1200px;
