--- a/style/main.scss
+++ b/style/main.scss
@@ -6,6 +6,7 @@
 @import "./_modal.scss";
 @import "./_dropdown.scss";
 @import "./_shadow-mixin.scss";
+@import "./_colors.scss";
 
 /* =================================
   Base Element Styles
@@ -22,10 +23,6 @@ html,
 body {
 	width: 100%;
 	font-family: "pt-sans", sans-serif;
-}
-
-p {
-	/*color: #9d9d9d;*/
 }
 
 h1, h2, h3 {
@@ -46,7 +43,7 @@ img {
 }
 
 h1 {
-	font-size: 22px;
+	font-size: 24px;
 }
 
 .wf-loading {
@@ -79,6 +76,11 @@ h1 {
 .nav {
 	float: right;
 	padding-right: 50px;
+	h3 {
+		float: left;
+		padding-right: 20px;
+		padding-top: 5px;
+	}
 }
 
 .name a,
@@ -87,8 +89,10 @@ h1 {
 	display: block;
 }
 
-.main-nav a {
-	text-transform: uppercase;
+.main-nav {
+	a {
+		text-transform: uppercase;
+	}
 }
 
 .svg {
@@ -112,12 +116,17 @@ h1 {
 }
 
 .portfolio {
+	text-align: center;
+	.col-6 {
+		padding-bottom: 20px;
+	}
 	.portfolio-img {
 		img {
 			display: block;
 			margin: 0 auto;
 			@include shadow(3);
 			@include transition(all 250ms);
+			border-radius: 20px;
 			&:hover {
 				@include transform(translateY(-5px));
 			}
@@ -160,7 +169,6 @@ Media Queries
 ==================================== */
 
 @media (max-width: 400px ) {
-
 	.name {
 		font-size: 20px;
 	}
@@ -180,16 +188,10 @@ Media Queries
 		.col-3 {
 			width: 50%;
 		}
-		.portfolio-img {
-			img {
-
-			}
-		}
 	}
 }
 
 @media (min-width: 769px) {
-
 	.main-header {
 	  position: fixed;
 	  width: 100%;
@@ -219,7 +221,8 @@ Media Queries
 
 @media (max-width: 850px) {
 	.content,
-	.contact {
+	.contact,
+	.modal-container {
 		.col-6 {
 			width: 100%;
 		}
