--- a/style/_gradient-background.scss
+++ b/style/_gradient-background.scss
@@ -7,9 +7,10 @@
 .intro-background {
     width: 100%;
     height: 600px;
-    background-color: rgb(144,164,174);
-    @include filter-gradient(#90a4ae, #607d8b, vertical);
-    @include background-image(linear-gradient(top,  rgba(144,164,174,1) 0%,rgba(96,125,139,1) 99%));
+    background-color: rgb(207,216,220);
+    @include filter-gradient(#cfd8dc, #607d8b, horizontal);
+    @include background-image(radial-gradient(center, ellipse cover,  rgba(207,216,220,1) 0%,rgba(96,125,139,1) 99%));
+
     .intro {
         display: block;
         width: 50%;
@@ -33,5 +34,19 @@
             margin-right: auto;
             box-shadow: 0 0 0 2px white;
         }
+    }
+    #intro-link {
+        // position: relative;
+        display: block;
+        width: 135px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 50px;
+        font-size: 14px;
+        letter-spacing: 0.9px;
+        padding: 11px 23px;
+        border: 1px solid #fff;
+        border-radius: 40px;
+        text-align: center;
     }
 }
