--- a/style/main.scss
+++ b/style/main.scss
@@ -8,6 +8,7 @@
 @import "./_shadow-mixin.scss";
 @import "./_colors.scss";
 @import "./_gradient-background.scss";
+@import "./_icon-animation.scss";
 
 /* =================================
   Base Element Styles
@@ -24,6 +25,7 @@ html,
 body {
 	width: 100%;
 	font-family: "Raleway", sans-serif;
+    font-size: 17px;
 }
 
 h1, h2, h3, h4 {
@@ -37,10 +39,6 @@ a {
 
 li {
 	list-style: none;
-}
-
-img {
-
 }
 
 h1 {
@@ -61,6 +59,13 @@ h1 {
 	margin-top: 20px;
 	margin-left: 10px;
 	display: inline-block;
+    .scroll {
+        transition: all .3s;
+        &:hover {
+            color: white !important;
+        }
+    }
+
 }
 
 .main-header {
@@ -70,6 +75,7 @@ h1 {
 	height: 70px;
     position: fixed;
     top: 0;
+    z-index: 2;
 }
 
 .nav {
@@ -100,18 +106,23 @@ h1 {
 
 /* Body */
 
-#about,
-#contact,
+.about,
+.contact,
 .portfolio {
 	padding: 0 20px 0 20px;
 }
 
-#contact h4 {
-	margin: 0 auto;
+.about {
+
 }
 
-#contact a {
-	text-decoration: underline;
+.contact {
+    h4 {
+       margin: 0 auto;
+    }
+    a {
+       text-decoration: underline;
+    }
 }
 
 .portfolio {
@@ -162,6 +173,13 @@ a.anchor {
     display: block;
     position: relative;
     top: -65px;
+    visibility: hidden;
+}
+
+#home {
+    display: block;
+    position: relative;
+    top: -115px;
     visibility: hidden;
 }
 
