Change intro background and text, add on load animations for header and intro area, minor copy changes

--- a/style/_colors.scss
+++ b/style/_colors.scss
@@ -3,5 +3,5 @@
 ==================================== */
 
 $modal-background: #CFD8DC;
-$dropdown-background: #B0BEC5;
+$dropdown-background: #CFD8DC;
 $secondary-color: #607d8b;
