--- a/style/_intro-background.scss
+++ b/style/_intro-background.scss
@@ -3,14 +3,25 @@
 ==================================== */
 
 @import "../node_modules/compass-mixins/lib/_compass.scss";
+@import "./_header-animation.scss";
+
+@include keyframes(dropHeader) {
+    0% {
+            transform: translateY(-40px);
+        }
+    100% {
+        transform: translateY(0);
+    }
+}
 
 .intro-background {
     width: 100%;
     height: 600px;
-    background-color: rgb(207,216,220);
-    @include filter-gradient(#cfd8dc, #607d8b, horizontal);
-    @include background-image(radial-gradient(center, ellipse cover,  rgba(207,216,220,1) 0%,rgba(96,125,139,1) 99%));
-
+    // background-color: rgb(207,216,220);
+    // @include filter-gradient(#cfd8dc, #607d8b, horizontal);
+    // @include background-image(radial-gradient(center, ellipse cover,  rgba(207,216,220,1) 0%,rgba(96,125,139,1) 99%));
+    background-image: url(../build/img/pexels-photo.jpeg);
+    background-size: cover;
     .intro {
         display: block;
         width: 50%;
@@ -18,12 +29,14 @@
         margin-right: auto;
         padding-top: 200px;
         .intro-text {
-            font-size: 17px;
+            font-size: 19px;
             line-height: 28px;
             letter-spacing: 0.2px;
+            text-align: center;
             strong {
                 font-weight: normal;
             }
+            @include animation('dropHeader 1 ease-in 0.7s');
         }
         #intro-img {
             display: block;
@@ -33,20 +46,21 @@
             margin-left: auto;
             margin-right: auto;
             box-shadow: 0 0 0 2px white;
+            @include animation('dropHeader 1 ease-in 0.7s');
         }
     }
     #intro-link {
-        // position: relative;
         display: block;
-        width: 135px;
+        width: 165px;
         margin-left: auto;
         margin-right: auto;
         margin-top: 50px;
-        font-size: 14px;
+        font-size: 17px;
         letter-spacing: 0.9px;
-        padding: 11px 23px;
+        padding: 5px;
         border: 1px solid #fff;
         border-radius: 40px;
         text-align: center;
+        @include animation('dropHeader 1 ease-in 0.7s');
     }
 }
