--- a/app/style/_intro-background.scss
+++ b/app/style/_intro-background.scss
@@ -17,10 +17,7 @@
 .intro-background {
     width: 100%;
     height: 600px;
-    // background-color: rgb(207,216,220);
-    // @include filter-gradient(#cfd8dc, #607d8b, horizontal);
-    // @include background-image(radial-gradient(center, ellipse cover,  rgba(207,216,220,1) 0%,rgba(96,125,139,1) 99%));
-    background-image: url(../build/img/pexels-photo.jpeg);
+    background-image: url(../img/pexels-photo.jpeg);
     background-size: cover;
     .intro {
         display: block;
