Update styling on landing page, darken hero image, change text color and tweak button animation

--- a/app/style/_colors.scss
+++ b/app/style/_colors.scss
@@ -3,5 +3,5 @@
 ==================================== */
 
 $modal-background: #CFD8DC;
-$dropdown-background: #CFD8DC;
+$dropdown-background: #546E7A;
 $secondary-color: #607d8b;
