--- a/app/style/_icon-animation.scss
+++ b/app/style/_icon-animation.scss
@@ -55,7 +55,7 @@
     }
     &:hover {
       background-color: $secondary-color;
-      height: 70px;
+    //   height: 70px;
       overflow: visible;
     }
 }
