--- a/app/style/_intro-background.scss
+++ b/app/style/_intro-background.scss
@@ -17,7 +17,7 @@
 .intro-background {
     width: 100%;
     height: 600px;
-    background-image: url(../img/pexels-photo.jpeg);
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url(../img/pexels-photo.jpeg);
     background-size: cover;
     .intro {
         display: block;
@@ -26,7 +26,8 @@
         margin-right: auto;
         padding-top: 200px;
         .intro-text {
-            font-size: 19px;
+            color: white;
+            font-size: 28px;
             line-height: 28px;
             letter-spacing: 0.2px;
             text-align: center;
@@ -47,17 +48,23 @@
         }
     }
     #intro-link {
+        color: white;
         display: block;
         width: 165px;
         margin-left: auto;
         margin-right: auto;
         margin-top: 50px;
-        font-size: 17px;
+        font-size: 19px;
         letter-spacing: 0.9px;
         padding: 5px;
         border: 1px solid #fff;
         border-radius: 40px;
         text-align: center;
         @include animation('dropHeader 1 ease-in 0.7s');
+        -webkit-transition: all .8s;
+        transition: all .8s;
+        &:hover {
+            width: 200px;
+        }
     }
 }
