--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -75,7 +75,7 @@ h1 {
 }
 
 .main-header {
-	background-color: white;
+	color: white;
 	box-shadow: 0 1px 4px rgba(0,0,0,.4);
 	width: 100%;
 	height: 70px;
@@ -99,6 +99,7 @@ h1 {
 
 .name a,
 .main-nav a {
+    color: white;
 	text-align: center;
 	display: block;
 }
