--- a/app/style/_intro-background.scss
+++ b/app/style/_intro-background.scss
@@ -7,34 +7,39 @@
 
 @include keyframes(dropHeader) {
     0% {
-            transform: translateY(-40px);
-        }
+        opacity: 0;
+    }
     100% {
-        transform: translateY(0);
+        opacity: 1;
     }
 }
 
 .intro-background {
-    width: 100%;
-    height: 600px;
-    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url(../img/pexels-photo.jpeg);
-    background-size: cover;
+    width: 100vw;
+    height: 100vh;
     .intro {
         display: block;
-        width: 50%;
+        width: 75vw;
         margin-left: auto;
         margin-right: auto;
-        padding-top: 200px;
+        padding-top: 15vh;
+        @include animation('dropHeader 1 ease-in 0.7s');
         .intro-text {
-            color: white;
-            font-size: 28px;
+            color: black;
+            font-size: 35px;
             line-height: 28px;
             letter-spacing: 0.2px;
-            text-align: center;
+            text-align: left;
             strong {
                 font-weight: normal;
             }
-            @include animation('dropHeader 1 ease-in 0.7s');
+            #name-hero {
+                font-weight: 700;
+            }
+        }
+        .intro-description {
+            font-size: 28px;
+            text-align: left;
         }
         #intro-img {
             display: block;
@@ -44,27 +49,49 @@
             margin-left: auto;
             margin-right: auto;
             box-shadow: 0 0 0 2px white;
-            @include animation('dropHeader 1 ease-in 0.7s');
         }
     }
     #intro-link {
-        color: white;
+        color: black;
         display: block;
         width: 165px;
         margin-left: auto;
         margin-right: auto;
-        margin-top: 50px;
+        margin-top: 250px;
         font-size: 19px;
         letter-spacing: 0.9px;
         padding: 5px;
         border: 1px solid #fff;
         border-radius: 40px;
         text-align: center;
-        @include animation('dropHeader 1 ease-in 0.7s');
         -webkit-transition: all .8s;
         transition: all .8s;
         &:hover {
             width: 200px;
         }
     }
+}
+
+@media (max-width: 350px) {
+    
+}
+
+@media (max-width: 410px) {
+
+}
+
+@media (max-width: 450px) {
+
+}
+
+@media (max-width: 650px) {
+
+}
+
+@media (min-width: 769px) {
+
+}
+
+@media (max-width: 850px) {
+
 }
