--- a/app/style/_colors.scss
+++ b/app/style/_colors.scss
@@ -3,5 +3,6 @@
 ==================================== */
 
 $modal-background: #CFD8DC;
-$dropdown-background: #546E7A;
-$secondary-color: #607d8b;
+$dropdown-background: black;
+$secondary-color: #007bff;
+$header-color: #007bff;
