Fix scrolling behaviour on name click, update contact and skills

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -122,13 +122,19 @@ h1 {
 	padding: 0 20px 0 20px;
 }
 
+.content {
+  // background-color: black;
+  padding: 0 20px 0 20px;
+
+}
+
 .contact {
-    h4 {
-       margin: 0 auto;
-    }
-    a {
-       text-decoration: underline;
-    }
+  h4 {
+   margin: 0 auto;
+  }
+  a {
+   text-decoration: underline;
+  }
 }
 
 .portfolio {
