Fix font sizes and margins for mobile on hero landing

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -244,10 +244,13 @@ Media Queries
 	.nav {
 		padding-right: 25px;
 	}
+  .contact {
+    margin-top: 60px;
+  }
 }
 
 @media (max-width: 450px) {
-    .name {
+  .name {
 		font-size: 19px;
 	}
 	.nav {
