--- a/app/style/_intro-background.scss
+++ b/app/style/_intro-background.scss
@@ -21,8 +21,6 @@
         @include animation('dropHeader 1 ease-in 0.7s');
         .intro-hero {
             color: black;
-            font-size: 2.5rem;
-            line-height: 1.5;
             letter-spacing: 0.2px;
             text-align: left;
             strong {
@@ -33,11 +31,7 @@
             }
         }
         .intro-description {
-            font-size: 28px;
             text-align: left;
-        }
-        .intro-question {
-            font-size: 22px;
         }
         #intro-img {
             display: block;
@@ -55,7 +49,6 @@
         width: 165px;
         margin-left: auto;
         margin-right: auto;
-        margin-top: 50px;
         font-size: 19px;
         letter-spacing: 0.9px;
         padding: 5px;
@@ -70,8 +63,20 @@
     }
 }
 
-@media (max-width: 350px) {
-
+@media (min-width: 360px) {
+    .intro {
+        // padding: 0 25px 0 25px;
+    }
+    .intro-hero {
+        font-size: 1.5rem;
+        line-height: 1.5;
+    }
+    .intro-description {
+        font-size: 18px;
+    }
+    .intro-question {
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 410px) {
@@ -90,6 +95,18 @@
 
 }
 
-@media (max-width: 850px) {
-
+@media (min-width: 850px) {
+    .intro-hero {
+        font-size: 2.5rem;
+        line-height: 1.5;
+    }
+    .intro-description {
+        font-size: 28px;
+    }
+    .intro-question {
+        font-size: 22px;
+    }
+    .intro-background #intro-link {
+        margin-top: 50px;
+    }
 }
