--- a/app/style/_intro-background.scss
+++ b/app/style/_intro-background.scss
@@ -63,10 +63,7 @@
     }
 }
 
-@media (min-width: 360px) {
-    .intro {
-        // padding: 0 25px 0 25px;
-    }
+@media screen and (min-width: 360px) {
     .intro-hero {
         font-size: 1.5rem;
         line-height: 1.5;
@@ -79,23 +76,7 @@
     }
 }
 
-@media (max-width: 410px) {
-
-}
-
-@media (max-width: 450px) {
-
-}
-
-@media (max-width: 650px) {
-
-}
-
-@media (min-width: 769px) {
-
-}
-
-@media (min-width: 850px) {
+@media screen and (min-width: 768px) {
     .intro-hero {
         font-size: 2.5rem;
         line-height: 1.5;
