Adjust viewport width on contact and skills

--- a/app/style/_colors.scss
+++ b/app/style/_colors.scss
@@ -2,7 +2,7 @@
 	Colors
 ==================================== */
 
-$modal-background: #CFD8DC;
+$modal-background: #ADD7F6;
 $dropdown-background: black;
 $secondary-color: #007bff;
 $header-color: #007bff;
