--- a/app/style/_modal.scss
+++ b/app/style/_modal.scss
@@ -51,6 +51,7 @@
 }
 
 .modal-inner {
+  padding-top: 40px;
   position: relative;
   overflow: hidden;
   max-width: 90%;
@@ -63,6 +64,7 @@
   transform: scale(0);
   transition: opacity 0.2s, transform 0.2s, z-index 0s 0.2s;
 	background-color: $modal-background;
+  border-radius: 15px;
 }
 
 .modal-visible .modal-inner {
@@ -77,14 +79,25 @@
   z-index: 2;
   right: 0;
   top: 0;
-  width: 35px;
-  height: 25px;
   line-height: 25px;
   font-size: 13px;
   cursor: pointer;
   text-align: center;
   background: #fff;
   box-shadow: -1px 1px 2px rgba(0,0,0,0.2);
+}
+
+.btn {
+  margin-right: 15px;
+  margin-top: 5px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  line-height: 1.5;
+  padding: 1em 2em;
+  letter-spacing: 0.05rem;
+  
+  &:focus { outline: 2px dotted black; }
 }
 
 .modal-item {
